--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "match-sorter": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-animated-text": "^0.1.4",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.3.2",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0"
