--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.28.0",
     "react-simple-image-slider": "^2.4.1",
     "react-slideshow-image": "^4.3.2",
